# c4-genai-suite

./: CHANGELOG.md  Caddyfile  DEVELOPERS.md  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yaml  dependency-review-config.yaml  release-please-config.json  release-please-manifest.json
.github/workflows/: backend.yaml  build-container-images.yaml  build-dev-helper-container-images.yaml  confluence-importer.yaml  dependency-review.yaml  e2e-template.yaml  e2e.yaml  frontend.yaml  gitleaks.yaml  helm-chart.yaml  publish.yaml  quality-gate.yaml  reis-stresstest.yaml  reis.yaml  release-prepare.yaml  release-publish-chart-and-container-images.yaml  release-publish.yaml
backend/: .env.example  CHANGELOG.md  Dockerfile  README.md  backend-dev-spec.json  package-lock.json  package.json
backend/docs/: Configuration.md
backend/src/: app.module.ts
backend/src/config/: typeorm-migration.config.ts
backend/src/controllers/: shared.ts
backend/src/extensions/: module.ts
backend/src/lib/: log-requests.ts
backend/src/metrics/: opentelemetry.module.ts
backend/src/migrations/: 1751955322727-moveTablesToCompanyChatSchema.ts  1753173977072-addUniqueConstraintForUserApiKey.ts  1754379840682-addConfigurationIdToMessages.ts  1756187236677-allowMultipleConversationsPerFile.ts  1758289967016-replaceAzureReasoningExtensionByAzureExtension.ts  (+1 more)
dev/caddy-gateway-proxy/: Dockerfile
dev/mcp-tool-as-server/: Dockerfile
dev/oauth-mock/: Dockerfile
dev/postgres/: docker-compose.yml
e2e/: package-lock.json  package.json
e2e/extension-tests/: azure-open-ai-assistant-change.spec.ts  azure-open-ai-new-chat.spec.ts  azure-open-ai-whole-file.spec.ts  azure-open-ai.spec.ts
frontend/: CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: index.css
helm-chart/: CHANGELOG.md  Chart.yaml  README.md  values.schema.json  values.yaml
helm-chart/templates/: _helpers.tpl  configmap-reis.yaml  deployment-backend.yaml  deployment-frontend.yaml  deployment-reis.yaml  ingress.yaml  secret-reis.yaml
helm-chart/tests/: configmap-reis_test.yaml  deployment-backend_test.yaml  deployment-frontend_test.yaml  deployment-reis_test.yaml  ingress_test.yaml  secret-reis_test.yaml
scripts/: README.md  process-management.js  run-tests.js
services/confluence-importer/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/confluence-importer/.run/: format.run.xml  lint.run.xml  main.py.run.xml
services/confluence-importer/confluence_importer/: __init__.py  c4.py  config.py  confluence.py  logger.py  markdown.py
services/confluence-importer/src/: c4.py  confluence.py  logger.py  main.py  markdown.py
services/confluence-importer/tests/: __init__.py  test_c4.py  test_confluence.py  test_markdown.py
services/reis/: .env.example  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  reis-dev-spec.json
services/reis/rei_s/: config.py  mcp.py  utils.py
services/reis/rei_s/routes/: files.py
services/reis/rei_s/services/: embeddings_provider.py  filestore_adapter.py  filestore_provider.py  multiprocess_utils.py  store_service.py  vectorstore_adapter.py  vectorstore_provider.py
services/reis/rei_s/services/filestores/: devnull.py  filesystem.py  s3.py
services/reis/rei_s/services/formats/: __init__.py  abstract_format_provider.py  code_provider.py  html_provider.py  json_provider.py  libre_office_provider.py  markdown_provider.py  ms_excel_provider.py  ms_ppt_provider.py  ms_word_provider.py  outlook_provider.py  pdf_provider.py  plain_provider.py  utils.py  video_transcription_provider.py  voice_transcription_provider.py  xml_provider.py  yaml_provider.py
services/reis/rei_s/services/vectorstores/: azure_ai_search.py  devnull_store.py  pgvector.py
services/reis/rei_s/types/: dtos.py  source_file.py
services/reis/tests/data/: birthdays.md  birthdays.odt  birthdays.xlsx
services/reis/tests/e2e/: file_store_s3_test.py  vector_store_azure_ai_test.py  vector_store_pgvector_test.py
services/reis/tests/stress/: processing_test.py
services/reis/tests/unit/: app_multi_worker_test.py  app_test.py  format_providers_test.py  tmp_file_permission_test.py  vector_store_azure_ai_test.py
(+200 files in other folders)
