[tool.poetry]
name = "REI-S"
version = "0.1.0"
description = ""
authors = ["Patrick Reichmann <patrick.reichmann@codecentric.de>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<4.0,>=3.12.0"
pydantic = "2.11.9"
pydantic-settings = "^2.10.1"
langchain-core = "0.3.76"
langchain-community = "0.3.29"
langchain-openai = "0.3.33"
langchain-postgres = "0.0.15"
psycopg = {extras = ["binary"], version = "^3.2.10"}
fastapi = {extras = ["standard"], version = "0.116.2"}
azure-search-documents = "11.5.3"
azure-identity = "1.25.0"
unstructured = {extras = ["docx", "md", "pptx", "xlsx"], version = "0.18.14"}
pdfminer-six = "^20250506"
pypdf = "^6.0.0"
ffmpeg-python = "^0.2.0"
aiofiles = "^24.1.0"
prometheus-fastapi-instrumentator = "^7.0.0"
fastmcp = "^2.12.3"
langchain-ollama = "^0.3.8"
langchain-aws = "^0.2.33"
langchain-nvidia-ai-endpoints = "^0.3.18"

[tool.poetry.group.dev.dependencies]
ruff = "0.13.0"
mypy = "1.18.1"
pre-commit = "4.3.0"
pytest = "8.4.2"
pytest-cov = "7.0.0"
pytest-mock = "3.15.1"
pytest-responses = "0.5.1"
pytest-github-report = "0.0.1"
pytest-error-for-skips = "2.0.2"
faker = "37.8.0"
responses = "0.25.8"

[tool.poetry.scripts]
download-tokenizers = "rei_s.prepare:download"
generate-api-spec = "rei_s.generate_open_api:generate"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "def __repr__",
    ]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "N", "A", "B"]

[tool.mypy]
strict = true
install_types = true
non_interactive = true
ignore_missing_imports = true
exclude = [
    ".cache",
    ]
